	- Object context menu available on geo map
	- Filter in event template configurator
	- Web console use client time zone to display time
	- Added option to use server time zone to display time in console
	- Access to event log, SNMP trap log, and syslog from object context menu
	- Dashboards can be associated with other objects (nodes, containers, etc.) and opened from object's context menu
- Fixed issues: #786, #831, #841, #852, #864, #890, #891, #892, #896, #897, #898, #900, #902, #903, #905, #910, #913, #917, #919, #921, #928, #933, #937, #943, #945, #947


*
* 2.0-RC1
*

- Fixed LDAP authentication issues with Active Directory
- Fixed character encoding issues in LDAP user data
- Java subagent improved
- Fixed multiple issues with agent side data caching
- Hash maps implemented in NXSL
- Improved array implementation in NXSL
- New NXSL function ArrayToString
- New OS parameters and tables: System.HandleCount, System.OpenFiles, Process.Handles
- Unified macros in all types of object tools
- Server can be switched to case-insensitive login names mode
- Implemented support of "command generates output" option for server commands
- Network device driver for TelcoBridges gateways
- Fixed memory leak in Qtech OLT driver
- Java subagent plugin for Ubiquity/LigoWave device monitoring
- Management console:
	- Default object display mode can be set in map properties
	- Map drill-down can be enabled in dashboard map elements
	- Input fields in object tools
	- Improved script editor for script library
	- Interface speed displayed in interface object details and in "Interfaces" tab
	- Symbolic name of interface type diplayed when known
- Fixed issues: #38, #55, #741, #818, #829, #830, #836, #838, #840, #843, #844, #845, #846, #848, #850, #853, #855, #856, #857, #862, #866


*
* 2.0-M5
*

- Agent-side caching of collected data
- Fixed bug in handling floating point Windows performance counters
- Added "comments" attribute to NXSL "DCI" class
- New NXSL function sha256