@@ -717,6 +717,7 @@ void DataCollectionTarget::getDciValuesSummary(SummaryTable *tableDefinition, Ta
                row = tableData->getNumRows() - 1;
             }
             tableData->setStatusAt(row, i + offset, ((DCItem *)object)->getThresholdSeverity());
+            tableData->setCellObjectIdAt(row, i + offset, object->getId());
             tableData->getColumnDefinitions()->get(i + offset)->setDataType(((DCItem *)object)->getDataType());
             if (tableDefinition->getAggregationFunction() == F_LAST)
             {
